Fix tree body text alignment on Linux.

--- a/res/style.css
+++ b/res/style.css
@@ -41,6 +41,7 @@ body, #root, .profileViewer {
   position: relative;
   outline: 0;
   will-change: scroll-position;
+  line-height: 16px;
 }
 
 .treeViewBodyInnerWrapper {
